--- a/app/views/services/index.html.erb
+++ b/app/views/services/index.html.erb
@@ -1,37 +1,23 @@
 <div class="container py-5">
-  <div class="row">
-    <div class="col-12 col-md-6 offset-lg-3">
-      <div class="bg-white rounded p-3 shadow">
-        <h1 style="text-align:center;">Servicios</h1>
-                    <table class="table">
-              <thead>
-                <tr>
-                  <th scope="col">#</th>
-                  <th scope="col">title</th>
-                  <th scope="col">content</th>
-                  <th scope="col">price</th>
-                </tr>
-              </thead>
+  <div class="col-12 col-lg-6">
+    <div class="card bg-light">
+      <%# <div class="col-12 col-md-6 offset-lg-3">
+          <div class="bg-white rounded p-3 shadow"> %>
+          <h1 style="text-align:center;">Servicios</h1>
           <% @services.each do |service| %>
-              <tbody>
-                <tr>
-                  <th scope="row">1</th>
-                  <th><%= service.title %></th>
-                </tr>
-                <tr>
-                  <th scope="row">2</th>
-                    <th><%= service.content %></th>
-                </tr>
-                <tr>
-                  <th scope="row">3</th>
-                    <th><%= service.price %></th>
-                </tr>
-              </tbody>
-            </table>
+            <div class="card">
+              <%# <img src="..." class="card-img-top" alt="..."> %>
+              <div class="card-body">
+                <h5 class="card-title"><%= service.title %></h5>
+                <p class="card-text"><%= service.content %></p>
+              </div>
+              <div class="card-footer">
+                <small class="text-muted"><%= service.price %></small>
+              </div>
+            </div>
           <% end %>
         </div>
       </div>
     </div>
   </div>
 </div>
-
