--- a/app/views/services/new.html.erb
+++ b/app/views/services/new.html.erb
@@ -5,7 +5,7 @@
         <h1 style="text-align:center;">Formulario</h1>
           <%= simple_form_for [@service] do |f| %>
             <%= f.input :title, prompt: "Titulo del servicio" %>
-            <%= f.input :content,prompt: "Conexto del serivicio"%>
+            <%= f.input :content,prompt: "Contexto del serivicio"%>
             <%= f.input :price, prompt: "Valor del servicio"%>
             <%= f.submit class: "btn btn-light" %>
           <%end%>
