--- a/app/views/services/show.html.erb
+++ b/app/views/services/show.html.erb
@@ -1,1 +1,14 @@
-<h1>show</h1>
+<div class="container py-5">
+  <div class="row">
+    <div class="col-12 col-md-10 offset-lg-1">
+      <div class="bg-white rounded p-3 shadow">
+        <h1 style="text-align:center;">Show</h1>
+          <%= @service.title %>
+          <%= @service.content %>
+          <%= @service.price %>
+        </div>
+        <%= link_to "volver a la lista", service_path %> 
+      </div>
+    </div>
+  </div>
+</div>
