--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -2,3 +2,8 @@
 @import "home";
 @import "about";
 @import "footer";
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@1,600&display=swap');
+
+html, body{
+  font-family: 'Open Sans', sans-serif;
+}
