--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -8,12 +8,12 @@
     <link rel="stylesheet" href="about.css">
 </head>
 <body>
-    <div class="banner">
-        <div class="container">
+    <div class="banners">
+        <div class="containers">
           <h1>Nuestro enfoque</h1>
         </div>
       </div>
-      <div class="container">
+      <div class="containers">
         <h2>Misión</h2>
         <p>
           Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias voluptas, quod ex atque, blanditiis veniam harum, quia omnis eius iure unde ullam rerum esse. Nulla assumenda atque temporibus, ab nam.
