--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -4,7 +4,7 @@
       <h1 class="fw-light title-color">BIENVENIDOS</h1>
       <p class="lead text-muted">Sorpréndete con nuestras historias</p>
       <p>
-        <a href="#" class="btn btn-warning my-2 btn-lg" style="width: 200px">Servicios</a>
+        <!--<%= link_to 'Servicios', services_path, class:"btn btn-warning my-2 btn-lg" %>--> 
         <a href="#" class="btn btn-warning my-2 btn-lg" style="width: 200px">   Blog  </a>
       </p>
     </div>
@@ -17,41 +17,41 @@
       
       <div class="col">
         <div class="card shadow-sm">
-            <img class="bd-placeholder-img card-img-top" width="100%" height="225" src="" alt="">              
+            <img class="bd-placeholder-img card-img-top" width="100%" height="225" src="icono_rio_arriba.png" alt="">              
           <div class="card-body">
-            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            <p class="card-text">informacion.</p>
           </div>
         </div>
       </div>
       <div class="col">
         <div class="card shadow-sm">
-            <img class="bd-placeholder-img card-img-top" width="100%" height="225" src="" alt="">              
+            <img class="bd-placeholder-img card-img-top" width="100%" height="225" src="icono_rio_arriba.png" alt="">              
           <div class="card-body">
-            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            <p class="card-text">informacion.</p>
           </div>
         </div>
       </div>
       <div class="col">
         <div class="card shadow-sm">
-            <img class="bd-placeholder-img card-img-top" width="100%" height="225" src="" alt="">              
+            <img class="bd-placeholder-img card-img-top" width="100%" height="225" src="icono_rio_arriba.png" alt="">              
           <div class="card-body">
-            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            <p class="card-text">informacion.</p>
           </div>
         </div>
       </div>   
       <div class="col">
         <div class="card shadow-sm">
-            <img class="bd-placeholder-img card-img-top" width="100%" height="225" src="" alt="">              
+            <img class="bd-placeholder-img card-img-top" width="100%" height="225" src="icono_rio_arriba.png" alt="">              
           <div class="card-body">
-            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            <p class="card-text">informacion.</p>
           </div>
         </div>
       </div>
       <div class="col">
         <div class="card shadow-sm">
-            <img class="bd-placeholder-img card-img-top" width="100%" height="225" src="" alt="">              
+            <img class="bd-placeholder-img card-img-top" width="100%" height="225" src="icono_rio_arriba.png" alt="">              
             <div class="card-body">
-            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            <p class="card-text">informacion.</p>
             <div class="d-flex justify-content-between align-items-center">
             </div>
           </div>
@@ -59,9 +59,9 @@
       </div>
       <div class="col">
         <div class="card shadow-sm">
-            <img class="bd-placeholder-img card-img-top" width="100%" height="225" src="" alt="">
+            <img class="bd-placeholder-img card-img-top" width="100%" height="225" src="icono_rio_arriba.png" alt="">
           <div class="card-body">
-            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            <p class="card-text">informacion.</p>
           </div>
         </div>
       </div>
