--- a/app/views/services/new.html.erb
+++ b/app/views/services/new.html.erb
@@ -4,7 +4,7 @@
       <div class="bg-white rounded p-3 shadow">
         <h1 style="text-align:center;">Formulario</h1>
           <%= simple_form_for [@service] do |f| %>
-            <%= f.input :title, prompt: "Titulo del servicio" %>
+            <%= f.input :title, prompt: "Titulo del servicio", placeholder: "Titulo del servicio" %>
             <%= f.input :content,prompt: "Contexto del serivicio"%>
             <%= f.input :price, prompt: "Valor del servicio"%>
             <%= f.submit class: "btn btn-light" %>
