--- a/app/views/blog_posts/index.html.erb
+++ b/app/views/blog_posts/index.html.erb
@@ -1,1 +1,26 @@
-<h1> Index </h1>
+<div class="container">
+  <div class="row">
+     <div class="col-12 col-md-10 offset-lg-1">
+       <div class="bg white rounded p-5 shadow">
+            <h1 class="text-center mb-5">Río Arriba Blog</h1>
+            <% @blog_posts.each do |single| %>
+            <div class="card mt-5">
+              <div class="card-header">
+                <%= single.name %>
+              </div>
+              <div class="card-body">
+                <p class="card-text"><%= single.content %></p>
+                 <div class="d-flex justify-content-end">
+                   <a href="#" class="btn btn-primary mx-1">Edit</a>
+                   <a href="#" class="btn btn-primary mx-1">Delete</a>
+                 </div>
+              </div>
+            </div>  
+            <% end %>
+        </div>
+      </div>
+  </div>
+</div> 
+
+
+
