--- a/app/views/blog_posts/show.html.erb
+++ b/app/views/blog_posts/show.html.erb
@@ -1,2 +1,16 @@
-<%= @blog_post.name%>
-<%= @blog_post.content%>
+<div class="container py-5">
+  <div class="card">
+    <div class="bg-white rounded p-3 shadow">
+      <div class="card-header">
+        <%=@blog_post.name%>
+          </div>
+            <div class="card-body">
+              <p class="card-text"><%=@blog_post.content%></p>
+              <div class="d-flex justify-content-end">
+              <a href="#" class="btn btn-primary mx-1">Edit</a>
+              <a href="#" class="btn btn-primary mx-1">Delete</a>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
