conexion de vistas, methodos de controlador delet y update, cuentas administrador

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -4,8 +4,9 @@
       <h1 class="fw-light title-color">BIENVENIDOS</h1>
       <p class="lead text-muted">Sorpréndete con nuestras historias</p>
       <p>
-        <!--<%= link_to 'Servicios', services_path, class:"btn btn-warning my-2 btn-lg" %>--> 
-        <a href="#" class="btn btn-warning my-2 btn-lg" style="width: 200px">   Blog  </a>
+        <!-- <a href="#" class="btn btn-warning my-2 btn-lg" style="width: 200px">   Blog  </a> --> 
+        
+        <!--<%= link_to 'Blog', blog_posts_path, class:"btn btn-warning my-2 btn-lg", style:"width: 200px"%>-->
       </p>
     </div>
   </div>
