--- a/app/views/blog_posts/index.html.erb
+++ b/app/views/blog_posts/index.html.erb
@@ -2,18 +2,30 @@
   <div class="row">
      <div class="col-12 col-md-10 offset-lg-1">
        <div class="bg white rounded p-5 shadow">
-            <h1 class="text-center mb-5">Río Arriba Blog</h1>
+            <h1 class="text-center" style="margin-bottom:5rem">Río Arriba Blog</h1>
+            <div class="d-flex justify-content-start">
+              <%= link_to 'Crea tu Post', new_blog_post_path %>
+            </div>
             <% @blog_posts.each do |single| %>
-            <div class="card mt-5">
+            <div class="card mb-5">
               <div class="card-header">
                 <%= single.name %>
               </div>
               <div class="card-body">
                 <p class="card-text"><%= single.content %></p>
-                 <div class="d-flex justify-content-end">
-                   <a href="#" class="btn btn-primary mx-1">Edit</a>
-                   <a href="#" class="btn btn-primary mx-1">Delete</a>
-                 </div>
+                <% if current_user %>
+                  <% if current_user.admin %>
+                  <div class="d-flex justify-content-end">
+                    <%= link_to "Edit", edit_blog_post_path(single.id), class:"btn btn-primary mx-1" %>
+                    <%= link_to "Delete",
+                                blog_post_path(single.id),
+                                method: :delete,
+                                data: { confirm: "Are you sure?" },
+                                class:"btn btn-primary mx-1"
+                                %>
+                  </div>
+                  <% end %>
+                <% end %>
               </div>
             </div>  
             <% end %>
@@ -21,6 +33,3 @@
       </div>
   </div>
 </div> 
-
-
-
