--- a/app/views/blog_posts/show.html.erb
+++ b/app/views/blog_posts/show.html.erb
@@ -3,12 +3,21 @@
     <div class="bg-white rounded p-3 shadow">
       <div class="card-header">
         <%=@blog_post.name%>
+        </div>
+          <div class="card-body">
+            <p class="card-text"><%=@blog_post.content%></p>
+            <div class="d-flex bd-highlight mt-5">
+              <%= link_to "Edit", edit_blog_post_path(@blog_post), class:"btn btn-primary mx-1 p-2 bd-highlight", style:"width:10%" %>
+              <%= link_to "Delete",
+                                blog_post_path(@blog_post),
+                                method: :delete,
+                                data: { confirm: "Are you sure?" },
+                                class:"btn btn-primary mx-1 p-2 bd-highlight"
+                                %>
+
+              <%= link_to "Volver",blog_posts_path, class:"ml-auto p-2 bd-highlight" %>
+            </div>
           </div>
-            <div class="card-body">
-              <p class="card-text"><%=@blog_post.content%></p>
-              <div class="d-flex justify-content-end">
-              <a href="#" class="btn btn-primary mx-1">Edit</a>
-              <a href="#" class="btn btn-primary mx-1">Delete</a>
         </div>
       </div>
     </div>
