footer statico, botones de banner y link a redes sociales

--- a/app/assets/stylesheets/pages/_footer.scss
+++ b/app/assets/stylesheets/pages/_footer.scss
@@ -1,3 +1,12 @@
 .backgroundcolor{
   background-color: $gray-500;
 }
+.footer {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  background-color: red;
+  color: white;
+  text-align: center;
+}
