--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,4 +1,4 @@
-<div class="navbar navbar-expand-sm navbar-light navbar-lewagon">
+<div class="navbar navbar-expand-sm navbar-light navbar-lewagon sticky-top">
   <%= link_to "/", class: "navbar-brand" do %>
     <%= image_tag "logo_rio_arriba.png" %>
     <% end %>
@@ -14,6 +14,9 @@
         <li class="nav-item active">
           <%= link_to "Servicios", services_path, class: "nav-link" %>
         </li>
+        <li class="nav-item active"> 
+          <%= link_to 'Blog', blog_posts_path, class: "nav-link"%>
+        </li>
         <li class="nav-item">
           <%= link_to current_user.email, "#", class: "nav-link" %>
         </li>
@@ -21,7 +24,7 @@
           <%= image_tag "icono_usuario.png", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
           <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
             <!--<%= link_to "Action", "#", class: "dropdown-item" %>-->
-            <%= link_to 'Blog', blog_posts_path, class: "dropdown-item"%>
+            <!--<%= link_to 'Blog', blog_posts_path, class: "dropdown-item"%>-->
             <!--<%= link_to "Another action", "#", class: "dropdown-item" %>-->
             <%= link_to "Log out", destroy_user_session_path, method: :delete, class: "dropdown-item" %>
           </div>
