agregar imagenes, descripción y cambio boton

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -6,11 +6,11 @@
         <p class="lead">Sorpréndete con nuestras historias</p>
         <p>
           <%# <a href="#" class="btn btn-warning my-2 btn-lg" style="width: 200px">  Servicios  </a> %>
-          <%= link_to "Nosotros", about_path, class:"btn btn-warning my-2 btn-lg", style:"width: 200px"%>
+          <%= link_to "Nosotros", about_path, class:"btn btn-outline-dark my-2 btn-lg", style:"width: 200px"%>
         
-          <%= link_to 'Blog', blog_posts_path, class:"btn btn-warning my-2 btn-lg", style:"width: 200px"%>
+          <%= link_to 'Blog', blog_posts_path, class:"btn btn-outline-dark my-2 btn-lg", style:"width: 200px"%>
           
-          <a href="#portafolio" class="btn btn-warning my-2 btn-lg", style="width: 200px">Portafolio</a>
+          <a href="#portafolio" class="btn btn-outline-dark my-2 btn-lg", style="width: 200px">Portafolio</a>
         </p>
       </div>
     </div>
@@ -23,41 +23,41 @@
       
       <div class="col">
         <div class="card-h shadow-sm">
-            <img src="forest.jpg" class="bd-placeholder-img card-img-top" width="100%" height="225"  alt="">              
+            <img src="https://images.unsplash.com/photo-1630702379394-e202e2fbe01e?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=717&q=80" class="bd-placeholder-img card-img-top" width="100%" height="225"  alt="">              
           <div class="card-body">
-            <p class="card-text">informacion.</p>
+            <p class="card-text">Enmarca en el papel la grandiosidad de los paisajes</p>
           </div>
         </div>
       </div>
       <div class="col">
         <div class="card shadow-sm">
-            <img class="bd-placeholder-img card-img-top" width="100%" height="225" src="forest.jpg" alt="">              
+            <img class="bd-placeholder-img card-img-top" width="100%" height="225" src="https://images.unsplash.com/photo-1623249288685-835abe0123b4?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=751&q=80" alt="">              
           <div class="card-body">
-            <p class="card-text">informacion.</p>
+            <p class="card-text">Importante para mantener vivos los recuerdos</p>
           </div>
         </div>
       </div>
       <div class="col">
         <div class="card shadow-sm">
-            <img class="bd-placeholder-img card-img-top" width="100%" height="225" src="forest.jpg" alt="">              
+            <img class="bd-placeholder-img card-img-top" width="100%" height="225" src="https://images.unsplash.com/photo-1591303099978-1b74728965df?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=700&q=80" alt="">              
           <div class="card-body">
-            <p class="card-text">informacion.</p>
+            <p class="card-text">Se genera un sentimiento por conservar aquello que no conoces</p>
           </div>
         </div>
       </div>   
       <div class="col">
         <div class="card shadow-sm">
-            <img class="bd-placeholder-img card-img-top" width="100%" height="225" src="forest.jpg" alt="">              
+            <img class="bd-placeholder-img card-img-top" width="100%" height="225" src="https://images.unsplash.com/photo-1414235077428-338989a2e8c0?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1950&q=80" alt="">              
           <div class="card-body">
-            <p class="card-text">informacion.</p>
+            <p class="card-text">Ser capaz de capturar en una foto “el sabor”</p>
           </div>
         </div>
       </div>
       <div class="col">
         <div class="card shadow-sm">
-            <img class="bd-placeholder-img card-img-top" width="100%" height="225" src="forest.jpg" alt="">              
+            <img class="bd-placeholder-img card-img-top" width="100%" height="225" src="https://images.unsplash.com/photo-1519379169146-d4b170447caa?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=750&q=80" alt="">              
             <div class="card-body">
-            <p class="card-text">informacion.</p>
+            <p class="card-text">Conjunto de emociones y sentimientos que se transmiten a quien las ve</p>
             <div class="d-flex justify-content-between align-items-center">
             </div>
           </div>
@@ -65,9 +65,9 @@
       </div>
       <div class="col">
         <div class="card shadow-sm">
-            <img class="bd-placeholder-img card-img-top" width="100%" height="225" src="forest.jpg" alt="">
+            <img class="bd-placeholder-img card-img-top" width="100%" height="225" src="https://images.unsplash.com/photo-1627310792467-81270c868dfd?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=749&q=80" alt="">
           <div class="card-body">
-            <p class="card-text">informacion.</p>
+            <p class="card-text">La esencia humana en relación con el entorno urbano</p>
           </div>
         </div>
       </div>
