--- a/app/assets/stylesheets/pages/_about.scss
+++ b/app/assets/stylesheets/pages/_about.scss
@@ -1,5 +1,5 @@
 .banners {
-    background-image: url(https://p4.wallpaperbetter.com/wallpaper/704/601/250/nature-scenery-images-hd-1920x1080-wallpaper-preview.jpg);
+    background-image: url("https://images.unsplash.com/photo-1502481851512-e9e2529bfbf9?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80");
     background-size: cover;
     color: black;
     padding: 120px 0;
@@ -29,8 +29,9 @@ body {
   
   /* Custom design */
   .banners {
-    background-image: url("https://p4.wallpaperbetter.com/wallpaper/704/601/250/nature-scenery-images-hd-1920x1080-wallpaper-preview.jpg");
+    background-image: url("https://images.unsplash.com/photo-1502481851512-e9e2529bfbf9?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80");
     background-size: cover;
+    background-position: center;
     color: #ECF0F1;
     padding: 100px 0;
   }
