--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -6,11 +6,11 @@
         <p class="lead">Sorpréndete con nuestras historias</p>
         <p>
           <%# <a href="#" class="btn btn-warning my-2 btn-lg" style="width: 200px">  Servicios  </a> %>
-          <%= link_to "Nosotros", about_path, class:"btn btn-outline-dark my-2 btn-lg", style:"width: 200px"%>
+          <%= link_to "Nosotros", about_path, class:"button", style:"width: 200px"%>
         
-          <%= link_to 'Blog', blog_posts_path, class:"btn btn-outline-dark my-2 btn-lg", style:"width: 200px"%>
+          <%= link_to 'Blog', blog_posts_path, class:"button", style:"width: 200px"%>
           
-          <a href="#portafolio" class="btn btn-outline-dark my-2 btn-lg", style="width: 200px">Portafolio</a>
+          <a href="#portafolio" class="button", style="width: 200px">Portafolio</a>
         </p>
       </div>
     </div>
