--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,6 +1,7 @@
 // Specific CSS for your home-page
 body{
   margin: 0px;
+  background-color: #e9eaecdc;
 }
 .bd-placeholder-img {
   font-size: 1.125rem;
@@ -11,7 +12,7 @@ body{
 }
 
 .backgroud-flowers{
-  background-image: url("https://images.unsplash.com/photo-1545182829-56371bbdb68f?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1950&q=80");
+  background-image: url("https://images.unsplash.com/photo-1595983639655-9ad595441c47?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1022&q=80");
   //opacity: 0.2;
   background-position: center;
   padding: 150px 0;
