--- a/app/views/blog_posts/index.html.erb
+++ b/app/views/blog_posts/index.html.erb
@@ -16,11 +16,11 @@
                 <% if current_user %>
                   <% if current_user.admin %>
                   <div class="d-flex justify-content-end">
-                    <%= link_to "Edit", edit_blog_post_path(single.id), class:"btn btn-primary mx-1" %>
-                    <%= link_to "Delete",
+                    <%= link_to "Editar", edit_blog_post_path(single.id), class:"btn btn-primary mx-1" %>
+                    <%= link_to "Eliminar",
                                 blog_post_path(single.id),
                                 method: :delete,
-                                data: { confirm: "Are you sure?" },
+                                data: { confirm: "¿Estás seguro?" },
                                 class:"btn btn-primary mx-1"
                                 %>
                   </div>
