--- a/app/views/blog_posts/show.html.erb
+++ b/app/views/blog_posts/show.html.erb
@@ -7,11 +7,11 @@
           <div class="card-body">
             <p class="card-text"><%=@blog_post.content%></p>
             <div class="d-flex bd-highlight mt-5">
-              <%= link_to "Edit", edit_blog_post_path(@blog_post), class:"btn btn-primary mx-1 p-2 bd-highlight", style:"width:10%" %>
-              <%= link_to "Delete",
+              <%= link_to "Editar", edit_blog_post_path(@blog_post), class:"btn btn-primary mx-1 p-2 bd-highlight", style:"width:10%" %>
+              <%= link_to "Eliminar",
                                 blog_post_path(@blog_post),
                                 method: :delete,
-                                data: { confirm: "Are you sure?" },
+                                data: { confirm: "¿Estás seguro?" },
                                 class:"btn btn-primary mx-1 p-2 bd-highlight"
                                 %>
 
