--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -10,23 +10,20 @@
 <body>
     <div class="banners">
         <div class="containers">
-          <h1>Nuestro enfoque</h1>
+          <h1>Sobre Río Arriba</h1>
         </div>
       </div>
       <div class="containers">
-        <h2>Misión</h2>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias voluptas, quod ex atque, blanditiis veniam harum, quia omnis eius iure unde ullam rerum esse. Nulla assumenda atque temporibus, ab nam.
+        Fundada durante el año 2021, Río Arriba busca posicionarse como una de las productoras audiovisuales más jóvenes y prometedoras del sur de Chile, construyendo relaciones a largo plazo con nuestros clientes. Es este enfoque personalizado lo que nos ha permitido aprender, crecer y desarrollarnos con altos estándares de calidad y ética, siempre buscando lo mejor para nuestros clientes y comunidades. 
         </p>
   
-        <h2>Visión</h2>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias voluptas, quod ex atque, blanditiis veniam harum, quia omnis eius iure unde ullam rerum esse. Nulla assumenda atque temporibus, ab nam.
+        Trabajamos en conjunto con una red de colaboradores interdisciplinaria que desarrolla contenidos y proyectos en varios formatos audiovisuales, entregando las herramientas necesarias para que un público transversal pueda contar sus historias.
         </p>
   
-        <h2>Valores</h2>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias voluptas, quod ex atque, blanditiis veniam harum, quia omnis eius iure unde ullam rerum esse. Nulla assumenda atque temporibus, ab nam.
+        Somos una productora, pero también comunidad. Buscamos informar, educar e inspirar a la mayor cantidad de personas posible. Es por eso que aquí encontrarás distintas entradas de blog y fotografías generadas por nuestro equipo y por una red de colaboradores que sigue en expansión por los distintos territorios del sur de Chile. 
         </p>
       </div>
 </body>
