Trabajo en colores, creación de alerta en booking

--- a/app/views/services/index.html.erb
+++ b/app/views/services/index.html.erb
@@ -25,7 +25,7 @@
               <h5 class="card-title"><%= service.title %></h5>
               <p class="card-content"><%= service.content %></p>
               <p class="card-text"><small class="text-price"> $<%= service.price %></small></p>
-               <%= link_to "Reservar", service_path(service), class:"btn-s btn btn-primary-s" %>
+               <%= link_to "Reservar", service_path(service), class:"btn-s btn btn-primary" %>
             </div>
           </div>
         </div>
