--- a/app/assets/stylesheets/pages/_service.scss
+++ b/app/assets/stylesheets/pages/_service.scss
@@ -19,8 +19,8 @@
   padding: 15px;
 }
 
-.btn-s{
-  border-radius: 10px;
-  background-color: #3986c59d;
+// .btn-s{
+//   border-radius: 10px;
+//   background-color: #3986c59d;
 
-}
+// }
