--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -9,7 +9,20 @@
 html, body{
   font-family: 'Open Sans', sans-serif;
   //background-color: #F9C784;
+  height: 100%;
+  
 }
+body {
+  display: flex;
+  flex-direction: column;
+}
+.content {
+  flex: 1 0 auto;
+}
+.footer {
+  flex-shrink: 0;
+}
+
 .background-sites{
   background-color: #F9C784;
 }
