--- a/app/views/services/index.html.erb
+++ b/app/views/services/index.html.erb
@@ -20,7 +20,7 @@
               </div>
             <% end %>
           <% end %>
-            <%= image_tag("", class:"card-img-top") %>
+            <%= cl_image_tag service.photo.key, height: 300, width: 400, crop: :fill, class:"card-img-top" %>
             <div class="card-body">
               <h5 class="card-title"><%= service.title %></h5>
               <p class="card-content"><%= service.content %></p>
