--- a/app/views/blog_posts/edit.html.erb
+++ b/app/views/blog_posts/edit.html.erb
@@ -5,6 +5,7 @@
         <h1 style="text-align:center;">Post</h1>
           <%= simple_form_for [@blog_post] do |f| %>
             <%= f.input :name, prompt: "Nombre", class:"", placeholder: "Ingrese su nombre", label:"Título"%>
+            <%= cl_image_tag @blog_post.photo.key, height: 300, width: 400, crop: :fill %>
             <%= f.input :content,prompt: "Mensaje", class:"", placeholder: "Ingrese su mensaje", label:"Mensaje"%>
             <div class="d-flex bd-highlight mt-5">
             <%= f.submit class:"btn btn-primary mx-1 p-2 bd-highlight", value:"Actualizar Post"%>
