--- a/app/views/blog_posts/index.html.erb
+++ b/app/views/blog_posts/index.html.erb
@@ -13,6 +13,9 @@
               </div>
               <div class="card-body">
                 <p class="card-text"><%= single.content %></p>
+              <div class="d-flex justify-content-center">
+                <%= cl_image_tag single.photo.key, height: 300, width: 400, crop: :fill %>
+              </div><br>
                 <% if current_user %>
                   <% if current_user.admin %>
                   <div class="d-flex justify-content-end">
