--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,10 +13,11 @@
   </head>
 
   <body>
+  <div class="content">  
     <%= render 'shared/navbar' %>
     <%= render 'shared/flashes' %>
-
     <%= yield %>
+    </div>
     <%= render  "shared/footer" %>
   </body>
 </html>
