--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,4 +1,4 @@
- <%# <footer class="text-muted py-0 backgroundcolor fixed-bottom">
+ <footer class="text-muted py-0 backgroundcolor fixed-bottom">
     <div class="container ">
       <div class="d-flex justify-content-center  align-items-center">
         <div class="p-2">
@@ -32,9 +32,9 @@
       </div>
     </div>
   </footer>
-   %>
+  
 
-   <div class="footer">
+   <%# <div class="footer">
   <div class="footer-links">
     <a href="#"><i class="fab fa-github"></i></a>
     <a href="#"><i class="fab fa-instagram"></i></a>
@@ -45,4 +45,4 @@
   <div class="footer-copyright">
     This footer is made with <i class="fas fa-heart"></i> at Le Wagon
   </div>
-</div>
+</div> %>
