cambio al español en device, cambio de color en blog y service

--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -5,6 +5,7 @@
 @import "service";
 @import "login";
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital@1&display=swap');
+@import "blogpost";
 
 html, body{
   font-family: 'Open Sans', sans-serif;
