--- a/app/assets/stylesheets/pages/_service.scss
+++ b/app/assets/stylesheets/pages/_service.scss
@@ -1,13 +1,16 @@
 /* style-Service */
 .container-s{
-  background-color: #cecece29
+  background-color: #f2f3e8da;
+  padding: 15px;
+  margin-top: 40px;
+
 }
 .card-s{
   border-radius: 10px;
-  margin: 10px;
+  margin: 50px;
   padding: 15px;
   text-align: center;
-  background-color: white;
+  background-color: rgb(238, 224, 224);
 }
 .row-s{
   display: flex;
