--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,20 +1,20 @@
 <div class="container">
   <div class="row justify-content-md-center">
     <div class="col-md-6">
-      <h2>Forgot your password?</h2>
+      <h2>¿Olvidaste tu contraseña?</h2>
 
         <%= simple_form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
           <%= f.error_notification %>
 
           <div class="form-inputs">
-            <%= f.input :email,
+            <%= f.input :email, label:"Correo electrónico",
                         required: true,
                         autofocus: true,
                         input_html: { autocomplete: "email" } %>
           </div>
 
           <div class="form-actions">
-            <%= f.button :submit, "Send me reset password instructions" %>
+            <%= f.button :submit, "Send me reset password instructions", value:"Restablecer contraseña" %>
           </div>
         <% end %>
 
