--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -3,27 +3,27 @@
     <div class="col-sm-9 col-md-7 col-lg-5 mx-auto">
       <div class="card border-0 shadow rounded-3 my-5">
         <div class="card-body p-4 p-sm-5">
-          <h2 class="card-title text-center ">Sign up</h2>
+          <h2 class="card-title text-center ">Registrate</h2>
 
           <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
             <%= f.error_notification %>
 
             <div class="form-inputs form-floating mb-3">
-              <%= f.input :email,
+              <%= f.input :email, label:"Correo electrónico",
                           required: true,
                           autofocus: true,
                           input_html: { autocomplete: "email" }%>
-              <%= f.input :password,
+              <%= f.input :password, label:"Contraseña",
                           required: true,
-                          hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length),
+                          hint: ("#{@minimum_password_length} caracteres mínimos" if @minimum_password_length),
                           input_html: { autocomplete: "new-password" } %>
-              <%= f.input :password_confirmation,
+              <%= f.input :password_confirmation, label:"Confirmación de contraseña",
                           required: true,
                           input_html: { autocomplete: "new-password" } %>
             </div>
 
             <div class="form-actions ">
-              <%= f.button :submit, "Sign up", class:"btn btn-primary btn-login text-uppercase fw-bold" %>
+              <%= f.button :submit, "Sign up", value:"Registrar", class:"btn btn-primary btn-login text-uppercase fw-bold" %>
             </div>
           <% end %>
 
