--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -26,12 +26,12 @@
             <!--<%= link_to "Action", "#", class: "dropdown-item" %>-->
             <!--<%= link_to 'Blog', blog_posts_path, class: "dropdown-item"%>-->
             <!--<%= link_to "Another action", "#", class: "dropdown-item" %>-->
-            <%= link_to "Log out", destroy_user_session_path, method: :delete, class: "dropdown-item" %>
+            <%= link_to "Cerrar sesión", destroy_user_session_path, method: :delete, class: "dropdown-item" %>
           </div>
         </li>
       <% else %>
         <li class="nav-item">
-          <%= link_to "Login", new_user_session_path, class: "nav-link" %>
+          <%= link_to "Iniciar sesión", new_user_session_path, class: "nav-link" %>
         </li>
       <% end %>
     </ul>
