cambios en blogpost y service

--- a/app/assets/stylesheets/pages/_service.scss
+++ b/app/assets/stylesheets/pages/_service.scss
@@ -1,6 +1,6 @@
 /* style-Service */
 .container-s{
-  background-color: #f2f3e8da;
+  background-color: rgba(244, 234, 236, 0.459);
   padding: 15px;
   margin-top: 40px;
 
