--- a/app/views/blog_posts/index.html.erb
+++ b/app/views/blog_posts/index.html.erb
@@ -1,7 +1,7 @@
 <div class="container-b">
   <div class="row-b">
-     <div class="col-12 col-md-10 offset-lg-1">
-       <div class="bg white rounded p-3 shadow">
+     <div class="color-b col-12 col-md-10 offset-lg-1">
+       <div class="bg rounded p-3 shadow">
             <h1 class="text-center" style="margin-bottom:5rem">Río Arriba Blog</h1>
             <div class="d-flex justify-content-center">
               <%= link_to 'Crea tu Post', new_blog_post_path %>
