--- a/app/assets/stylesheets/pages/_blogpost.scss
+++ b/app/assets/stylesheets/pages/_blogpost.scss
@@ -1,23 +1,8 @@
 
 .container-b{
-// background-color: #f5f5f5;
 padding: 15px;
 margin-top: 40px;
   }
-.card-b{
-// //border-radius: 10px;
-// //margin: 50px;
-// //padding: 15px;
-// //text-align: center;
-background-color: rgb(238, 224, 224);
+.color-b{
+  background-color: rgba(244, 234, 236, 0.459);
 }
-// // //   .row-b{
-// // //     display: flex;
-// // //     margin-right: 0px;
-// // //     margin-left: 0px;
-// // //     flex-wrap: wrap;
-// // //     flex-direction: row;
-// // //     justify-content: space-around;
-// // //     padding: 15px;
-// // //   }
-  
