--- a/app/views/services/index.html.erb
+++ b/app/views/services/index.html.erb
@@ -1,5 +1,6 @@
-<div class="container-s container py-5">
-  <h1 style="text-align:center;">Servicios</h1>
+<div class="container-s container py-3 shadow">
+<%#   <h1 style="text-align:center;">Servicios</h1> %>
+  <h1 class="text-center" style="margin-bottom:5rem">Servicios</h1>
   <% if current_user %>
     <% if current_user.admin %>
       <h6 style="text-align:center;"><%= link_to "Crear Nuevo Servicio", new_service_path%></h6>
